# site

./: Cargo.toml  README.md  VARFILE  deploy.sh  site.service
public/: blog.html  index.html  music.html  site.css
public/blog/: how-to-self-host-a-git-server.html  how-to-setup-a-git-server-and-cgit.html
public/components/: footer.html  head.html  nav.html  nav_button.js
public/posts/: how-to-setup-a-git-server-and-cgit.html
public/releases/: christmas.html  haemolacriaa.html  hhaemolacria.html  phosphenes.html  template.html  waxing-and-waning.html
src/: env.rs  main.rs  state.rs
