[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["compression-gzip", "fs", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
